@@ -379,24 +379,6 @@ argument_list|>
 argument_list|()
 decl_stmt|;
 specifier|private
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|Long
-argument_list|>
-name|rowCountMap
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|Long
-argument_list|>
-argument_list|()
-decl_stmt|;
-specifier|private
 specifier|static
 specifier|final
 name|String
@@ -872,6 +854,24 @@ argument_list|<
 name|String
 argument_list|,
 name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+specifier|public
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Long
+argument_list|>
+name|rowCountMap
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Long
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -1512,6 +1512,16 @@ literal|":"
 operator|+
 name|taskId
 decl_stmt|;
+name|QueryInfo
+name|ji
+init|=
+name|queryInfoMap
+operator|.
+name|get
+argument_list|(
+name|queryId
+argument_list|)
+decl_stmt|;
 name|StringBuilder
 name|sb1
 init|=
@@ -1695,6 +1705,8 @@ name|getCounter
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|ji
+operator|.
 name|rowCountMap
 operator|.
 name|put
@@ -1819,13 +1831,28 @@ block|}
 specifier|public
 name|void
 name|printRowCount
-parameter_list|()
+parameter_list|(
+name|String
+name|queryId
+parameter_list|)
 block|{
+name|QueryInfo
+name|ji
+init|=
+name|queryInfoMap
+operator|.
+name|get
+argument_list|(
+name|queryId
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 name|String
 name|tab
 range|:
+name|ji
+operator|.
 name|rowCountMap
 operator|.
 name|keySet
@@ -1836,6 +1863,8 @@ name|console
 operator|.
 name|printInfo
 argument_list|(
+name|ji
+operator|.
 name|rowCountMap
 operator|.
 name|get
